--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ body::before {
 }
 .revealed-content {
   position:absolute;inset:0;display:flex;flex-direction:column;align-items:center;justify-content:center;
-  background:linear-gradient(135deg,#ffffff 0%,#f8fafc 100%);z-index:1;padding:32px;text-align:center;
+  background:linear-gradient(135deg,#ffffff 0%,#f8fafc 100%);z-index:1;padding:52px;text-align:center;
 }
 #scratchCanvas {
   position:absolute;inset:0;cursor:crosshair;z-index:2;touch-action:none;border-radius:21px;
@@ -372,8 +372,8 @@ footer a {color:var(--gold);text-decoration:none;font-weight:600;}
 <div class="celebration" id="celebration"></div>
 
 <section class="hero">
-  <div class="hero-bg" style="background-image:url('OIP.jpg');"></div>
   <div class="hero-bg" style="background-image:url('OIP (1).jpg');"></div>
+  <div class="hero-bg" style="background-image:url('OIP.jpg');"></div>
   <div class="hero-bg" style="background-image:url('OIP (2).jpg');"></div>
   <div class="hero-content">
     <div class="premium-logo">
@@ -397,7 +397,7 @@ footer a {color:var(--gold);text-decoration:none;font-weight:600;}
         <div style="margin:18px 0;">
           <img src="gift.jpg" alt="Watson Cargo New Year Voucher" style="max-width:100%;border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,0.25);">
         </div>
-        <p style="font-size:20px;color:#333;margin-top:6px;font-weight:600;">Congratulations!</p>
+        <p style="font-size:20px;color:#f40404;margin-top:6px;font-weight:600;">Congratulations!</p>
       </div>
       <canvas id="scratchCanvas"></canvas>
     </div>
@@ -524,7 +524,7 @@ document.addEventListener('DOMContentLoaded', () => {
     ctx.fillText('SCRATCH HERE', canvas.width / 2, canvas.height / 2 - 18);
     ctx.font = '500 14px Inter, system-ui';
     ctx.fillStyle = 'rgba(0,0,0,0.35)';
-    ctx.fillText('← Drag to reveal your voucher →', canvas.width / 2, canvas.height / 2 + 18);
+    ctx.fillText('← Drag to reveal →', canvas.width / 2, canvas.height / 2 + 18);
 
     isScratching = false;
     hasRevealed = false;
@@ -568,7 +568,7 @@ document.addEventListener('DOMContentLoaded', () => {
     const percent = (transparent / (canvas.width * canvas.height)) * 100;
     progressFill.style.width = `${Math.min(percent, 100).toFixed(0)}%`;
 
-    if (percent > 55) {
+    if (percent > 25) {
       fullyReveal();
     }
   }
@@ -701,3 +701,4 @@ document.querySelectorAll('[data-animate]').forEach(el => observer.observe(el));
 </script>
 </body>
 </html>
+
