--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ footer a {color:var(--gold);text-decoration:none;font-weight:600;}
     <div class="scratch-card-wrapper" id="scratchCard">
       <div class="revealed-content">
         <div style="margin:18px 0;">
-          <img src="gift.jpg" alt="Watson Cargo New Year Voucher" style="max-width:100%;border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,0.25);">
+          <img src="gift.png" alt="Watson Cargo New Year Voucher" style="max-width:100%;border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,0.25);">
         </div>
         <p style="font-size:20px;color:#f40404;margin-top:6px;font-weight:600;">Congratulations!</p>
       </div>
@@ -701,4 +701,5 @@ document.querySelectorAll('[data-animate]').forEach(el => observer.observe(el));
 </script>
 </body>
 </html>
+
 
